2003-11-06  Zoltan Varga  <zovarga@ws-zovarga2>

	* mono/benchmark/pinvoke.cs: New benchmark for testing the performance
	of the managed/unmanaged boundary.

2003-11-06  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in acconfig.h: Add check for __thread keyword in gcc.

2003-10-29  Dick Porter  <dick@ximian.com>

	* man/mono.1: Document MONO_EXTERNAL_ENCODINGS variable

2003-10-16  Miguel de Icaza  <miguel@ximian.com>

	* man/mono.1: Document new --trace options

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: add hppa support (64bit only)
	make solaris build work with Forte compiler

2003-10-13  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added check for pthread_attr_setstacksize.

	* mono/tests/ChangeLog: New file.
	
2003-10-13  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/Makefile.am: Link the tests with the test driver program
	used for the mini tests.

2003-10-10  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/libtest.c (mono_test_marshal_delegate): Added test for
	stdcall calling convention.

2003-10-09  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Check for ICU availability

2003-10-09  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/tests/libtest.c: fix after merge of pinvoke2.cs

2003-10-07  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/tests/Makefile.am mono/tests/libtest.c
	mono/tests/pinvoke18.cs: new test for bool marshalling.

2003-10-07  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/scripts/Makefile.am mono/scripts/*.in: fix
	managed .exe paths so they are found under cygwin.

2003-10-07  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/pinvoke2.cs mono/tests/libtest.c: Fix array of structs
	test.

2003-10-06  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/tests/pinvoke2.cs mono/tests/pinvoke11.cs 
	mono/tests/libtest.c: Add more pass by value struct
	tests for platforms with more complex calling conventions 
	(Sparc V9, HPPA 64 bit).
