@@ -30,8 +30,12 @@ fi
   DIE=1
 }
 
+if [ -z "$LIBTOOL" ]; then
+  LIBTOOL=`which glibtool` || LIBTOOL=`which libtool`
+fi
+
 (grep "^AM_PROG_LIBTOOL" $srcdir/configure.in >/dev/null) && {
-  (libtool --version) < /dev/null > /dev/null 2>&1 || {
+  ($LIBTOOL --version) < /dev/null > /dev/null 2>&1 || {
     echo
     echo "**Error**: You must have \`libtool' installed to compile Mono."
     echo "Get ftp://ftp.gnu.org/pub/gnu/libtool-1.2d.tar.gz"
@@ -91,7 +95,7 @@ esac
 if grep "^AM_PROG_LIBTOOL" configure.in >/dev/null; then
   if test -z "$NO_LIBTOOLIZE" ; then 
     echo "Running libtoolize..."
-    libtoolize --force --copy
+    ${LIBTOOL}ize --force --copy
   fi
 fi
 
